--- a/hanoi-towers/index.html
+++ b/hanoi-towers/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Towers of Hanoi</title>
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body class="light">
     <div class="app-container">
         <nav class="top-nav">
@@ -28,7 +26,7 @@
                 </div>
             </div>
         </nav>
-
+        
         <main class="main-content">
             <div class="game-panel">
                 <div class="game-controls">
@@ -77,8 +75,7 @@
                     </div>
                     <p class="completion-text">
                         <span data-i18n="completed">You completed the puzzle in</span>
-                        <span class="moves-count"><span id="finalMoves">0</span> <span
-                                data-i18n="moves">moves</span></span>!
+                        <span class="moves-count"><span id="finalMoves">0</span> <span data-i18n="moves">moves</span></span>!
                     </p>
                     <button id="playAgain" class="btn-primary" data-i18n="playAgain">
                         <i class="fas fa-redo"></i>
@@ -91,5 +88,4 @@
     <script src="i18n.js"></script>
     <script src="script.js"></script>
 </body>
-
-</html>
+</html> 
